# simplege

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.hpp  event_handler.cpp  event_handler.hpp  gl.sublime-project  i_handler.hpp  libpng.cpp  libpng.hpp  lighting.cpp  lighting.hpp  main.cpp  model.cpp  model.hpp  model_factory.cpp  model_factory.hpp  model_factory_manager.cpp  model_factory_manager.hpp  opengl_application.cpp  opengl_application.hpp  shader_factory.cpp  shader_factory.hpp  texture.cpp  texture.hpp
generic/: make_unique.hpp  singleton.hpp
shaders/: shader.fs  shader.vs
utils/: logger.cpp  logger.hpp  utils.cpp  utils.hpp
